Frontend is done now!

--- a/van_gogh/templates/index.html
+++ b/van_gogh/templates/index.html
@@ -3,10 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Van Gogh</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     </head>
 
     <body>
-        <h1>Hello World!</h1>
-        <script src="{{ url_ }}"></script>
+        <div class="container">
+            <nav class="navbar navbar-dark navbar-expand-md bg-dark">
+                <a class="navbar-brand" href="/">Van Gogh</a>
+            </nav>
+
+            <main class="container" role="main">
+                <div id="vote-container"></div>
+            </main>
+        </div>
+
+        <script id="preload">
+            var PRELOAD = {{ artists|tojson|safe }};
+        </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+        <script src="{{ url_for('static', filename='js/vote.tpl.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/results.tpl.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </body>
 </html>
